<resources>
    <string name="app_name">PharmacyLc</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">cadastre-se</string>
    <string name="n_o_possui_uma_conta">Não Possui Uma Conta?</string>
    <string name="email">Email</string>
    <string name="entrar_button_login">Entrar</string>
    <string name="entrar_cadastro">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="text_cadastre_se">Cadastre-se</string>
    <string name="j_possui_uma_conta">Já Possui Uma Conta?</string>
    <string name="Primeira_senha">Senha</string>
    <string name="segunda_senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="primeira_senha">Senha</string>
    <string name="campo_email">Email</string>
    <string name="confirmar_senha">Confirmar senha</string>

    <string name="first_slide">Escolha Seus Produtos</string>
    <string name="second_slide">Entrega Rápida</string>
    <string name="third_slide">Bom Atendimento</string>

    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="todo">TODO</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="vamos_come_ar">Vamos Começar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_categoria_list">TODO</string>
    <string name="category_name">Category Name</string>
    <string name="category">Category</string>
    <string name="we_provide_best_products">We provide best products.</string>
    <string name="see_all">See All</string>
    <string name="see_all1">See All</string>
    <string name="popular_products">Popular Products</string>
    <string name="provide_best_products">We provide best products.</string>
    <string name="new_products">New Products</string>
    <string name="see_all2">See All</string>
    <string name="categorias">categorias</string>
    <string name="fornecemos_os_melhores_produtos">fornecemos os melhores produtos</string>
    <string name="fornecemos_os_melhores_produtos2">fornecemos os melhores produtos</string>
    <string name="ver_todos">Ver todos</string>
    <string name="ver_todos2">Ver todos</string>
    <string name="novos_produtos">Novos Produtos</string>
    <string name="produtos_populares">Produtos populares</string>
    <string name="ver_todos3">Ver todos</string>
    <string name="pre_o">preço: $</string>
    <string name="todoo">TODO</string>
    <string name="_90">90</string>
    <string name="product_name">Product Name</string>
    <string name="novo">Novo</string>
    <string name="preco">Preço</string>
    <string name="produto">produto</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="pesquisar">pesquisar</string>
    <string name="cep">CEP</string>
    <string name="n_mero_de_telefone">Número de Telefone</string>
    <string name="AdicionarEndereço">Adicionar endereço</string>
    <string name="pre_o_total_r_40">Preço Total : R$40</string>
    <string name="sub_total">Sub-total</string>
    <string name="desconto">Desconto</string>
    <string name="taxa_de_entrega">Taxa de Entrega</string>
    <string name="r_0">R$ 0</string>
    <string name="r_1">R$ 0</string>
    <string name="r_2">R$ 0</string>
    <string name="total">Total</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="alagoas">Alagoas</string>
    <string name="pesquisa">pesquisa</string>
    <string name="data_atual">Data Atual:</string>
    <string name="horal_atual">Horal Atual:</string>
    <string name="nome2">Nome:</string>
    <string name="pre_co">Preço:</string>
    <string name="pre_o_total">Preço Total:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="criar_endere_o">Criar Endereço</string>
    <string name="nome3">Nome</string>
    <string name="rua">Rua</string>
    <string name="cidade">Cidade</string>
    <string name="n_mero_de_telefone2">Número de Telefone</string>
    <string name="adicionar_endere_o">Adicionar Endereço</string>
    <string name="endere_o">Endereço</string>
    <string name="continue_com_o_pagamento">Continue com o pagamento</string>
    <string name="adicionar_endere_o1">Adicionar Endereço</string>
    <string name="meu_carrinho">Meu Carrinho</string>
    <string name="detalhes">Detalhes</string>
    <string name="pagamento">Pagamento</string>
    <string name="todos_os_items">Todos os Items</string>
    <string name="adicionar_ao_carrinho">Adicionar ao Carrinho</string>
    <string name="compre_agora1">Compre agora</string>
    <string name="compre_agora2">Compre agora</string>
    <string name="valor_total_r_40">Valor Total: R$ 40</string>
    <string name="bem_vindo_a_minha_farm_cia">Bem-vindo a minha farmácia</string>
    <string name="aguarde_por_favor">Aguarde, Por favor...</string>
</resources>