<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/slider_img"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboardscreen1"
        tools:ignore="ContentDescription,ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/slider_img"
        android:textStyle="bold" android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/first_slide"
        android:fontFamily="@font/arimo"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/description"
        android:layout_marginTop="10dp"
        tools:ignore="VisualLintLongText" />

</androidx.constraintlayout.widget.ConstraintLayout>