<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        tools:ignore="MissingClass,TextSizeCheck">

        <ImageView
            android:id="@+id/new_img"
            android:layout_width="100dp"
            android:layout_height="98dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/todoo"
            android:scaleType="centerCrop"
            android:src="@drawable/milk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="@font/alata"
            android:padding="4dp"
            android:text="@string/novo"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/new_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/new_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:fontFamily="@font/alata"
            android:text="@string/produto"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/new_img" />



        <TextView
            android:id="@+id/dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="Preço: R$"
            android:textColor="#673AB7"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/new_product_name"
            app:layout_constraintStart_toStartOf="@+id/new_product_name"
            app:layout_constraintTop_toBottomOf="@+id/new_product_name"
            tools:ignore="HardcodedText,VisualLintOverlap,VisualLintBounds" />

        <TextView
            android:id="@+id/new_price"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="90"
            android:textColor="#673AB7"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dollar"
            app:layout_constraintStart_toEndOf="@+id/dollar"
            app:layout_constraintTop_toTopOf="@+id/dollar"
            android:layout_marginStart="3dp"
            tools:ignore="HardcodedText,MissingConstraints,NotSibling,SmallSp,VisualLintBounds" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>