<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetalheActivity">


    <ImageView
        android:id="@+id/detalhe_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/detalhes" />

    <androidx.cardview.widget.CardView
        android:translationY="-50dp"
        android:id="@+id/carview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detalhe_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView

                    android:id="@+id/detalhe_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Produto"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/rating"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.0"
                    android:textColor="@color/black"
                    android:layout_toStartOf="@+id/my_rating"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    tools:ignore="HardcodedText" />
                <RatingBar
                    android:id="@+id/my_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_alignParentRight="true"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>
            <TextView
                android:id="@+id/detalhe_desc"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preço"
                android:textSize="21sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="R$"
                    android:textStyle="bold"

                    android:textColor="@color/purple_700"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/detalhe_price"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="20"
                    android:textStyle="bold"

                    android:textColor="@color/purple_700"
                    tools:ignore="HardcodedText" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                >

                <ImageView
                    android:id="@+id/add_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="7dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/plusicon"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,RtlHardcoded" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/iconminus"
                    android:id="@+id/remove_item"
                    tools:ignore="ContentDescription" />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:drawableLeft="@drawable/mycart"
        android:drawableTint="@color/white"
        android:padding="14dp"
        android:text="@string/adicionar_ao_carrinho"
        android:textAllCaps="false"
        android:textColor="#0D47A1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carview"
        app:layout_constraintVertical_bias="0.685"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />

    <Button
        android:id="@+id/buy_now"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_200"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
        android:drawableTint="@color/white"
        android:padding="14dp"
        android:text="@string/compre_agora1"
        android:textAllCaps="false"
        android:textColor="#546E7A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />



</androidx.constraintlayout.widget.ConstraintLayout>